update libs, remove unused code
Signed-off-by: AaronPinto <10177767+AaronPinto@users.noreply.github.com>